--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -57,7 +57,7 @@
 .s5-progress-container {
     height: 8px;
     background-color: #d8d8d8;
-    margin: 20px 32px 22px;
+    margin: 20px 57px 22px;
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -96,9 +96,8 @@
         display: none;
     }
     .s5-progress-container{
-        width: inherit;
+        width: 100%;
         height: 8px;
-        margin-top: 10px;
         margin: 10px 0px ;
     }
     .section-5{
